--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h3 class="my-profession" id="iam">
                   I'm a <span class="typing"></span>
                 </h3>
-                <p>
+                <p style="top: 50px">
                   Passionate Web Developer and MERN Stack Enthusiast dedicated
                   to creating dynamic, user-focused, and scalable digital
                   experiences with innovation.!
@@ -131,7 +131,11 @@
                 <a href="#contact" class="btn hire-me">Hire Me</a>
               </div>
               <div class="home-img padd-15">
-                <img src="images/shivam.jpg" alt="" />
+                <img
+                  style="width: 80%; height: 80%"
+                  src="images/shivam.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -149,7 +153,7 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>I'm shivam sharma and <span>Web Developer</span></h3>
+                    <h3>I'm Shivam Sharma and <span>Web Developer</span></h3>
                     <p>
                       Creative Web Developer and MERN Stack Enthusiast with a
                       passion for crafting dynamic, responsive, and user-centric
@@ -164,27 +168,28 @@
                   <div class="personal-info padd-15">
                     <div class="row">
                       <div class="info-item padd-15">
-                        <p>Birthday : <span>01 July 2003</span></p>
+                        <p>DOB : <span>01 July 2003</span></p>
                       </div>
-                      <div class="info-item padd-15">
-                        <p>Age : <span>21</span></p>
-                      </div>
+
                       <!-- <div class="info-item padd-15">
                                             <p>Website : <span>www.example.com</span></p>
                                         </div> -->
                       <div class="info-item padd-15">
+                        <p>City : <span>New Delhi</span></p>
+                      </div>
+                      <div class="info-item padd-15">
                         <p>
-                          Email : <span>shivamsharma21022003@gmail.com</span>
+                          Email :
+                          <span class="email-text"
+                            >tech.shivam021@gmail.com</span
+                          >
                         </p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Degree : <span>MCA pursuing</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Phone : <span>+91 6395409744</span></p>
-                      </div>
-                      <div class="info-item padd-15">
-                        <p>City : <span>Delhi</span></p>
+                        <p>Phone : <span>+91 9211781562</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Freelance : <span>Available</span></p>
@@ -203,42 +208,35 @@
                         <h5>Javascript</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 65%"></div>
-                          <div class="skill-percent">65%</div>
+                          <div class="skill-percent">60%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>HTML & CSS</h5>
+                        <h5>HTML5 & CSS3</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 85%"></div>
                           <div class="skill-percent">85%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>React</h5>
+                        <h5>React.js</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 50%"></div>
-                          <div class="skill-percent">50%</div>
-                        </div>
-                      </div>
-                      <div class="skill-item padd-15">
-                        <h5>PHP</h5>
-                        <div class="progress">
-                          <div class="progress-in" style="width: 55%"></div>
                           <div class="skill-percent">55%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>My SQL</h5>
+                        <h5>Express.js</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 65%"></div>
-                          <div class="skill-percent">65%</div>
+                          <div class="progress-in" style="width: 55%"></div>
+                          <div class="skill-percent">50%</div>
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>Tailwind css</h5>
+                        <h5>Mongodb</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 80%"></div>
-                          <div class="skill-percent">80%</div>
+                          <div class="progress-in" style="width: 65%"></div>
+                          <div class="skill-percent">55%</div>
                         </div>
                       </div>
                     </div>
@@ -260,7 +258,7 @@
                               Master's of Computer Application
                             </h4>
                             <p class="timeline-text">
-                              Pusuing In Master's Computer Application At Abdul
+                              Pursuing In Master's Computer Application At Abdul
                               Kalam Technical university
                             </p>
                           </div>
@@ -273,8 +271,8 @@
                               Becholer oF Computer Application
                             </h4>
                             <p class="timeline-text">
-                              pursuing in echoler oF Computer Application At Ch.
-                              charan Singh University
+                              Pursuing Bachelor of Computer Applications at
+                              Chaudhary Charan Singh University.
                             </p>
                           </div>
                           <div class="timeline-item">
@@ -312,77 +310,72 @@
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-mobile-alt"></i>
+                    <i class="fa fa-solid fa-brain"></i>
                   </div>
-                  <h4>Web Designer</h4>
+                  <h4>Full-Stack Web Development</h4>
                   <p>
-                    Skilled Web Designer crafting visually appealing,
-                    user-friendly websites with creativity and modern design
-                    principles.
+                    Build dynamic, scalable web apps using MongoDB, Express,
+                    React, Node.js.
                   </p>
                 </div>
               </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-laptop-code"></i>
+                    <i class="fa fa-solid fa-layer-group"></i>
                   </div>
-                  <h4>Creative Developer</h4>
+                  <h4>Frontend Design with React</h4>
                   <p>
-                    Driven Creative Developer delivering innovative solutions,
-                    blending technology, design, and strategy for impactful
-                    experiences.
+                    Create interactive, fast UIs using reusable React components
+                    and hooks.
                   </p>
                 </div>
               </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-palette"></i>
+                    <i class="fa fa-solid fa-sitemap"></i>
                   </div>
-                  <h4>Web Developer</h4>
+                  <h4>Backend API Development</h4>
                   <p>
-                    Professional Web Developer specializing in building
-                    responsive, user-focused websites using modern technologies
-                    and efficient coding practices.
+                    Develop secure REST APIs with Express and Node for smooth
+                    communication.
                   </p>
                 </div>
               </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-code"></i>
+                    <i class="fa fa-solid fa-fingerprint"></i>
                   </div>
-                  <h4>Responsive Developer</h4>
+                  <h4>Authentication & Authorization</h4>
                   <p>
-                    Expert in Responsive Development, creating seamless,
-                    adaptable web experiences across all devices and screen
-                    sizes
+                    Implement secure login systems using JWT, sessions, and
+                    OAuth methods.
                   </p>
                 </div>
               </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <i class="fa fa-solid fa-seedling"></i>
                   </div>
-                  <h4>WebSite Developer</h4>
+                  <h4>Database Management (MongoDB)</h4>
                   <p>
-                    Website Developer skilled in designing, building, and
-                    maintaining responsive, functional, and user-friendly
-                    websites with modern technologies.
+                    Design efficient schemas and perform advanced queries in
+                    MongoDB database.
                   </p>
                 </div>
               </div>
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon">
-                    <i class="fa fa-bullhorn"></i>
+                    <i class="fa fa-solid fa-satellite"></i>
                   </div>
-                  <h4>Front-Developer</h4>
+                  <h4>App Deployment & Cloud Hosting</h4>
                   <p>
-                    Front-End Developer focused on crafting interactive and
-                    user-friendly interfaces using HTML, CSS, and JS.
+                    Launch and maintain web apps with reliable uptime and global
+                    accessibility.
                   </p>
                 </div>
               </div>
@@ -411,10 +404,19 @@
                   <div class="portfolio-img">
                     <img src="#" alt="" />
                   </div>
-                  <h3 style="text-align: center">The Shoes Company </h3>
+                  <h3 style="text-align: center">The Shoes Company</h3>
                   <div class="btnbox">
-                    <button class="probtn"><a href="https://astonishing-semolina-d3625e.netlify.app/">Live Demo</a></button>
-                    <button class="probtn"><a href="https://github.com/Shivam-021/The-Shoes-Company.git">View Code</a></button>
+                    <button class="probtn">
+                      <a href="https://astonishing-semolina-d3625e.netlify.app/"
+                        >Live Demo</a
+                      >
+                    </button>
+                    <button class="probtn">
+                      <a
+                        href="https://github.com/Shivam-021/The-Shoes-Company.git"
+                        >View Code</a
+                      >
+                    </button>
                   </div>
                 </div>
               </div>
@@ -426,10 +428,18 @@
                   <h3 style="text-align: center">Weather App</h3>
                   <div class="btnbox">
                     <button class="probtn">
-                      <a href=" https://weather-app-kappa-ten-64.vercel.app/" target="_blank">Live Demo</a>
+                      <a
+                        href=" https://weather-app-kappa-ten-64.vercel.app/"
+                        target="_blank"
+                        >Live Demo</a
+                      >
                     </button>
                     <button class="probtn">
-                      <a href="https://github.com/Shivam-021/Weather-App.git" target="_blank">View Code</a>
+                      <a
+                        href="https://github.com/Shivam-021/Weather-App.git"
+                        target="_blank"
+                        >View Code</a
+                      >
                     </button>
                   </div>
                 </div>
@@ -442,10 +452,18 @@
                   <h3 style="text-align: center">Advance ToDo App</h3>
                   <div class="btnbox">
                     <button class="probtn">
-                      <a href="https://todo-app-chi-umber-95.vercel.app/" target="_blank">Live Demo</a>
+                      <a
+                        href="https://todo-app-chi-umber-95.vercel.app/"
+                        target="_blank"
+                        >Live Demo</a
+                      >
                     </button>
                     <button class="probtn">
-                      <a href="https://github.com/Shivam-021/Todo-App.git" target="_blank">View Code</a>
+                      <a
+                        href="https://github.com/Shivam-021/Todo-App.git"
+                        target="_blank"
+                        >View Code</a
+                      >
                     </button>
                   </div>
                 </div>
@@ -458,10 +476,18 @@
                   <h3 style="text-align: center">Calculator</h3>
                   <div class="btnbox">
                     <button class="probtn">
-                      <a href="https://calculator-drab-zeta-25.vercel.app/" target="_blank">Live Demo</a>
+                      <a
+                        href="https://calculator-drab-zeta-25.vercel.app/"
+                        target="_blank"
+                        >Live Demo</a
+                      >
                     </button>
                     <button class="probtn">
-                      <a href="https://github.com/Shivam-021/Calculator.git" target="_blank">View Code</a>
+                      <a
+                        href="https://github.com/Shivam-021/Calculator.git"
+                        target="_blank"
+                        >View Code</a
+                      >
                     </button>
                   </div>
                 </div>
@@ -477,7 +503,11 @@
                       <a href="#" target="_blank">Live Demo</a>
                     </button>
                     <button class="probtn">
-                      <a href="https://github.com/Shivam-021/Student-Registration-Form.git" target="_blank">View Code</a>
+                      <a
+                        href="https://github.com/Shivam-021/Student-Registration-Form.git"
+                        target="_blank"
+                        >View Code</a
+                      >
                     </button>
                   </div>
                 </div>
@@ -493,7 +523,11 @@
                       <a href="#" target="_blank">Live Demo</a>
                     </button>
                     <button class="probtn">
-                      <a href="https://github.com/Shivam-021/Lottery-Game.git" target="_blank">View Code</a>
+                      <a
+                        href="https://github.com/Shivam-021/Lottery-Game.git"
+                        target="_blank"
+                        >View Code</a
+                      >
                     </button>
                   </div>
                 </div>
@@ -519,16 +553,16 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h4>Call Us On</h4>
-                <p>+91 9310846515</p>
+                <p>+91 9211781562</p>
               </div>
               <div class="contact-info-item padd-15">
                 <div class="icon">
                   <i class="fa fa-brands fa-linkedin-in"></i>
                 </div>
-                <h4>Linked In</h4>
+                <h4>LinkedIn</h4>
                 <p>
                   <a
-                    href="https://www.linkedin.com/in/shivam-sharma-4704b2302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                    href="https://www.linkedin.com/in/shivam-sharma-24924636a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                     target="_blank"
                     style="color: white"
                   >
@@ -539,11 +573,11 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-envelope"></i></div>
                 <h4>Email</h4>
-                <p>shivamsharma21022003@gmail.com</p>
+                <p>tech.shivam021@gmail.com</p>
               </div>
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-brands fa-github"></i></div>
-                <h4>github</h4>
+                <h4>Github</h4>
                 <p>
                   <a
                     href="https://github.com/Shivam-021"
