--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                   Hello, my name is <span>Shivam Sharma</span>
                 </h3>
                 <h3 class="my-profession" id="iam">
-                  I'm a <span class="typing"></span>
+                  I am a
+                  <span class="typing"></span>
                 </h3>
                 <p style="top: 50px">
                   Passionate Web Developer and MERN Stack Enthusiast dedicated
